# kindle-file-fix

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/kindle-fix-cli/: Cargo.toml
crates/kindle-fix-cli/src/: main.rs  output.rs
crates/kindle-fix-cli/tests/: cli_test.rs
crates/kindle-fix-core/: Cargo.toml
crates/kindle-fix-core/src/: error.rs  lib.rs  types.rs
crates/kindle-fix-core/src/formats/: mod.rs
crates/kindle-fix-core/src/formats/azw3/: mod.rs
crates/kindle-fix-core/src/formats/epub/: mod.rs  reader.rs  writer.rs
crates/kindle-fix-core/src/formats/epub/fixes/: body_id.rs  encoding.rs  language.rs  mod.rs  stray_img.rs
crates/kindle-fix-core/src/formats/mobi/: mod.rs
crates/kindle-fix-core/tests/: epub_fixer_test.rs  epub_reader_test.rs  epub_writer_test.rs  fix_body_id_test.rs  fix_encoding_test.rs  fix_language_test.rs  fix_stray_img_test.rs  process_file_test.rs
crates/kindle-fix-core/tests/helpers/: mod.rs
crates/kindle-fix-gui/: Cargo.toml  tauri.conf.json
crates/kindle-fix-gui/src/: commands.rs  main.rs
docs/plans/: 2026-02-22-kindle-file-fix-design.md  2026-02-22-kindle-file-fix-implementation.md
gui/: build.mjs  package-lock.json  package.json  tsconfig.json
gui/src/: index.html  main.ts  styles.css
