[package]
name = "kindle-file-fix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool to fix Kindle-incompatible ebook files"

[[bin]]
name = "kindle-file-fix"
path = "src/main.rs"

[dependencies]
kindle-fix-core = { path = "../kindle-fix-core" }
clap = { version = "4", features = ["derive"] }
colored = "3"
indicatif = "0.17"
dialoguer = "0.11"
env_logger = "0.11"
log = "0.4"
